--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,6 +10,9 @@
     --krub: "krub", sans-serif;
     --tenor: "tenor", sans-serif;
     --zen: "zen", sans-serif;
+    --yellowtail:  "Yellowtail", serif;
+    --kalam: "kalam", serif;
+    --borel: "Borel", sans-serif;
 }
 
 
@@ -22,6 +25,10 @@ body {
     box-sizing: border-box;
     background-color: rgb(236, 239, 243);
 }
+
+/* .side-nav-col {
+    background-color: rgb(248, 248, 248);
+} */
 
 a:hover {
     color: rgb(201, 124, 7);
@@ -36,7 +43,7 @@ h1, .sub2  {
     font-size: 2em;
 }
 
-.sub3, .sub4, .text {
+.sub3, .sub4, .sub5, .text {
     font-family: var(--arsenal);
 }
 
@@ -45,13 +52,20 @@ h1, .sub2  {
     text-decoration: none;
 }
 
+
+
 .text {
     font-size: 1.2em;
 }
 
 .activity-text {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: .9em;
+}
+
+.aside-text {
     font-family: sans-serif;
-    font-size: 1.1em;
+    font-size: 1em;
 }
 
 .bold {
@@ -70,9 +84,43 @@ h1, .sub2  {
     background-color: white;
 }
 
+.panel {
+    padding: 20px;
+    background-color: rgb(189, 210, 237);
+}
+
 .top-nav {
     margin: 20px 0;
 }
+
+.side-nav-col {
+    background-color: rgb(189, 210, 237);
+    padding: 8px;
+}
+
+.side-nav-sub {
+    font-family: var(--arsenal);
+    font-size: 1.2em;
+    text-decoration: none;
+    color: rgb(16, 19, 113)
+}
+
+.music-link {
+    /* font-family: serif; */
+    padding-left: 10px;
+    font-family: var(--arsenal);
+    font-size: 1em;
+    text-decoration: none;
+    color: rgb(16, 19, 113)
+}
+
+.music-link:hover { 
+        font-size: 1.1em;
+        color: rgb(190, 5, 48);
+        text-decoration: underline;
+        text-decoration-color: rgb(190, 5, 48);
+        /* font-size: 1.3em; */
+    }
 
 .lesson-link {
     font-family: var(--arsenal);
@@ -82,11 +130,21 @@ h1, .sub2  {
 
 .lesson-link:hover {
     color: rgb(190, 5, 48);
+    text-decoration: underline;
+    text-decoration-color: rgb(190, 5, 48);
     /* font-size: 1.3em; */
 }
 
+/* table {
+    padding-left: 25px;
+} */
+
 .vocab-list {
     list-style-type: none;
+}
+
+.hour {
+    background-color: rgb(150, 154, 254);
 }
 
 .form-control {
@@ -98,9 +156,34 @@ h1, .sub2  {
     font-size: .8em;
 }
 
-/* .jpv-img {
-    max-height: ;
-} */
+audio {
+    margin: 3px;
+    padding: 0 45px;
+    /* border: 1px solid green; */
+}
+
+.decorative-text1 {
+    font-family: var(--kalam); 
+    font-style: italic;
+    font-size: 2.4em;
+    color: rgb(150, 154, 254);
+    color: rgb(87, 167, 182);
+    color: transparent;
+    background-clip: text;
+    background-image: linear-gradient(rgb(118, 123, 250) 40%, rgb(84, 165, 179) 60%);
+    -webkit-background-clip: text; 
+    -webkit-text-fill-color: transparent;
+    text-shadow: 4px 6px rgba(200, 200, 200, 0.566);
+    /* text-decoration-style: w; */
+}
+
+.decorative-text2 {
+    font-family: var(--borel);
+    font-size: 1.6em;
+    color: rgb(173, 9, 9);
+}
+
+
 
 #avoirex {
     height: 65%;
@@ -138,6 +221,9 @@ h1, .sub2  {
     border-radius: 50px;
 }
 
+#joyeuxAnniversaire {
+    border-radius: 50%;
+}
 
 
 #L1L3Iframe, .iframe {
